fixed the issue of horizontal scroll bar being always displayed

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,5 +2,5 @@ body {
     margin: 0px;
     padding: 0px;
     width: 100vw;
-    min-width: 100vw;
+    max-width: 100vw;
 }
